# etcd-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
etcd-client/: Cargo.toml  build.rs
etcd-client/proto/: lock.proto  rpc.proto
etcd-client/src/: client.rs  error.rs  lazy.rs  lib.rs  response_header.rs
etcd-client/src/auth/: authenticate.rs  mod.rs
etcd-client/src/kv/: cache.rs  delete.rs  get.rs  mod.rs  put.rs  range.rs  txn.rs
etcd-client/src/lease/: grant.rs  keep_alive.rs  mod.rs  revoke.rs
etcd-client/src/lock/: release.rs  require.rs
etcd-client/src/protos/: kv.rs  lock.rs  lock_grpc.rs  mod.rs
etcd-client/src/watch/: mod.rs  watch_impl.rs
examples/: lease.rs
mock-etcd/: Cargo.toml  README.md  build.rs
mock-etcd/.github/workflows/: ci.yml
mock-etcd/proto/: lock.proto
mock-etcd/src/: auth.rs  lib.rs  mock_etcd.rs  rpc.rs  rpc_grpc.rs
src/: client.rs  error.rs  lazy.rs  lib.rs  proto.rs
src/auth/: authenticate.rs  mod.rs
src/kv/: cache.rs  delete.rs  get.rs  mod.rs  put.rs  range.rs  txn.rs
src/lease/: grant.rs  mod.rs  revoke.rs
src/lock/: mod.rs  release.rs  require.rs
src/protos/: mod.rs
src/watch/: mod.rs  watch_impl.rs
