[package]
name = "etcd-client"
version = "0.3.0"
authors = ["ccc <mrwwheat@gmail.com>"]
edition = "2018"
keywords = ["etcd", "future", "async"]
repository = "https://github.com/datenlord/etcd-client"
homepage = "https://github.com/datenlord/etcd-client"
description = "etcd client for datenlord"
license = "MIT"

[dependencies]
anyhow = "1.0.31"
async-compat = "0.1.5"
async-stream = "0.2"
async-trait = "0.1"
bytes = "0.5"
futures = "0.3"
http = "0.2"
prost = "0.6"
smol = "1.2.4"
thiserror = "1.0"
tonic = { version = "0.3", features = ["tls"] }

[build-dependencies]
tonic-build = "0.3"
