[package]
name = "mock-etcd"
version = "0.1.0"
authors = ["Zheng Pan <zhengpan@google.com>"]
edition = "2021"
keywords = ["etcd"]
repository = "https://github.com/datenlord/mock-etcd"
description = "mock etcd"
license = "MIT"
categories = ["storage"]

[dependencies]
async-lock = "2.3.0"
async-io = "1.6.0"
env_logger = "0.9.3"
futures = "0.3.5"
grpcio = { version = "0.9.1", default-features = false, features = ["protobuf-codec"] }
log = "0.4.11"
protobuf = "2.16.2"
utilities = { git = "https://github.com/datenlord/utilities", rev = "4ef408d" }
smol = { version = "1.2.5" }
async-recursion = "1.0.4"

[build-dependencies]
protoc-grpcio = "3.0.0"

[dev-dependencies]
etcd-client = { path = "../etcd-client" }
async-compat = "0.2.1"
